fixed readability

--- a/styles.css
+++ b/styles.css
@@ -166,13 +166,13 @@ header a:hover {
   font-weight: bold;
   color: white;
   text-align: left;
-  text-shadow: 1px 1px 7.5px #000000;
+  text-shadow: 0px 0px 5px black;
 }
 
 .pack_desc {
   margin-top: 5px;
   font-size: 12px;
-  text-shadow: 1px 1px 10px #000000;
+  text-shadow: 0px 0px 5px black;
 }
 
 /*Glow Effect*/
